# AndroidVulkanGameEngine

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMain.cpp  VulkanApplication.cpp
app/src/main/headers/: Logging.h  VulkanApplication.h
app/src/main/res/values/: strings.xml
